feat(sbom groups): updated to reflect latest ADR
